# xy-path

./: .gitignore  CMakeLists.txt  README.md  audio_i2s.pio  flash.sh  main.c  paths.txt  pico_sdk_import.cmake  renderer.c  renderer.h  run.sh  toolchain-xpack.cmake
.claude/commands/: commit-gplog.md  flash-gplog.md
tmp/: gen_paths_h.py
vect/: space.txt
